// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container component should have helper classnames 1`] = `
<DocumentFragment>
  <div
    class="container is-paddingless is-block-widescreen-only is-flex-touch is-hidden-desktop"
  >
    <div
      class="bd-notification is-success"
    >
      <p>
        Default
      </p>
      <p>
        Container
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Container component should render 1`] = `
<DocumentFragment>
  <div
    class="container"
  />
</DocumentFragment>
`;
